<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tituloDoApp">Karuta Kanji</string>
    <string name="app_name">Karuta Kanji</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_escolha_adificuldade">EscolhaADificuldade</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tela_inicial_multiplayer">TelaInicialMultiplayer</string>
    <string name="game_title">Karuta Kanji</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Jogo rápido</string>
    <string name="invite_players">Convidar amigos</string>
    <string name="see_invitations">Ver convites</string>
    <string name="quick_game_explanation">Jogue contra um adversário qualquer.</string>
    <string name="invite_players_explanation">Convide amigos para jogar.</string>
    <string name="see_invitations_explanation">Veja quem está te convidando agora.</string>
    <string name="inv_popup_text">Está vindo um convite!</string>
    <string name="accept_popup_invite">Aceitar</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Aguarde...</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Erro</string>
    <string name="game_problem">Você foi desconectado da partida com o outro jogador.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="title_activity_multiplayer_escolha_uma_categoria">MultiplayerEscolhaUmaCategoria</string>
    <string name="decidindo_quem_escolhe_a_categoria">MultiplayerEscolhaUmaCategoria</string>
    <string name="decidindoCategoria">Decidindo a categoria...</string>
    <string name="esperandoDecidirCategoria">Esperando o outro jogador decidir a categoria e a duração da partida...</string>
    <string name="titulo_escolha_categoria">Escolha as categorias</string>
    <string name="por_favor_aguarde">por favor, aguarde...</string>
    <string name="erroEscolherCategorias">Escolha pelo menos uma categoria</string>
    <string name="carregando_kanjis_remotamente">carregando listas de kanjis</string>
    <string name="contagem_kanjis"> kanjis</string>
    <string name="espere_adversario_selecionar_categoria">espere o adversário selecionar a categoria</string>
    <string name="escolha_a_duracao">Quantas rodadas terão a partida?</string>
    <string name="uma_rodada">Uma rodada(8 cartas)</string>
    <string name="duas_rodadas">Duas rodadas(9-16 cartas)</string>
    <string name="tres_rodadas">Três rodadas(17-24 cartas)</string>
    <string name="infinitas_rodadas">Infinitas rodadas(partida dura 1:30)</string>
    <string name="tempo_restante">Tempo restante:</string>
    <string name="rodada">Rodada:</string>
    <string name="pontuacao">Pontuação:</string>
    <string name="item">Item:</string>
    <string name="dica_kanji"> </string>
    <string name="texto_karuta1">間に合う</string>
    <string name="texto_karuta2">間に合う</string>
    <string name="texto_karuta3">間に合う</string>
    <string name="texto_karuta4">間に合う</string>
    <string name="texto_karuta5">間に合う</string>
    <string name="texto_karuta6">間に合う</string>
    <string name="texto_karuta7">間に合う</string>
    <string name="texto_karuta8">間に合う</string>
    <string name="mensagem_clicou_carta_errada">Você errou. Espere 5 segundos</string>
    <string name="mensagem_trovao_carta_aleatoria_nao_acerta_nada">Você não pode tirar a única carta do jogo. Perdeu o item.</string>
    <string name="mensagem_trovao_tira_carta_tira_dica">Você não pode tirar a carta com a resposta para a dica. Perdeu o item.</string>
    <string name="tituloTelaFimDeJogo">Fim de jogo</string>
    <string name="suaPontuacao">Sua pontuação:</string>
    <string name="pontuacaoDoAdversario">Pontuação do adversário:</string>
    <string name="instrucao_chat">mensagem qualquer</string>
    <string name="enviar_mensagem">Enviar</string>
    <string name="revanche">Revanche</string>
    <string name="menu_principal">Menu principal</string>
    <string name="modo_treinamento">Treinamento</string>
    <string name="descricao_modo_treinamento">Nesse modo, você irá aprender os kanjis do jogo aos poucos. Você sempre verá os kanjis e suas traduções antes de jogar e o jogo começa com poucas cartas na tela, mas vai aumentando à medida que você vai avançando. \nPor favor escolha uma ou mais categorias:</string>
    <string name="treinamento">Treinamento</string>
    <string name="title_activity_modo_treinamento">ModoTreinamento</string>
    <string name="nivel">Nivel:</string>
    <string name="vidas">Vidas:</string>
    <string name="aviso_ultimos_kanjis_modo_treinamento">Lembre-se desse kanjis</string>
    <string name="observacao_mais_uma_carta">Observação: Mais uma carta foi adicionada ao treinamento</string>
    <string name="que_significa">que significa</string>
    <string name="ganhou">ganhou</string>
    <string name="perdeu">perdeu</string>
    <string name="empatou">empatou</string>
    <string name="dados_partidas_anteriores">Dados das partidas anteriores</string>
    <string name="title_activity_dados_partidas_anteriores">DadosPartidasAnteriores</string>
    <string name="vitorias_modo_multiplayer">Vitórias no modo multiplayer:</string>
    <string name="derrotas_modo_multiplayer">Derrotas no modo multiplayer:</string>
    <string name="ultimas_partidas">Últimas partidas</string>
    <string name="carregando_dados_das_partidas">Carregando dados das partidas</string>
    <string name="label_adversario">Adversário:</string>
    <string name="categorias">Categorias:</string>
    <string name="title_activity_mostrar_dados_uma_partida">MostrarDadosUmaPartida</string>
    <string name="dados_da_partida">Dados da partida</string>
    <string name="data_da_partida">Data da partida:</string>
    <string name="email_do_adversario">E-mail do adversário:</string>
    <string name="quem_venceu">Quem venceu:</string>
    <string name="palavrasTreinadas">Palavras treinadas</string>
    <string name="palavrasAcertadas">Palavras que você acertou</string>
    <string name="palavrasErradas">Palavras que você errou</string>
    <string name="voce">Você</string>
    <string name="adversario">Adversário</string>
    <string name="mensagem_por_favor_atualize_o_jogo">Você possui uma versão antiga do sistema. Por favor atualize o jogo para a versão mais recente. A versão mais recente é:</string>
	<string name="iniciandoJogo">Iniciando o jogo</string>
	<string name="tituloFimModoTreinamento">Fim do modo treinamento</string>
	<string name="chegouAteQueNivel">Chegou até o nível:</string>
	<string name="treinarNovamente">Treinar novamente</string>
    
    <!-- dos macetes -->
    <string name="macete_akachan_bebe">Um bebê de boca grande e braços estirados está chorando</string>
    <string name="macete_akemasu_abrir">Um portão aberto com um "A" no meio</string>
    <string name="macete_atama_cabeca">Do lado esquerdo está escrito "koi" que é amor em japonês. Do lado direito uma menina de marias-chiquinhas está de cabeça para baixo. A menina não consegue tirar o amor da cabeça dela</string>
    <string name="macete_hakobimasu_carregar">Um caminhão visto de cima transporta um pacote por um caminho</string>
    <string name="macete_hikimasu_puxar">Eu puxo uma corda e ela fica reta</string>
    <string name="macete_ijou_acima">É a junção de um "I" em português e em katakana com o kanji de cima</string>
    <string name="macete_ika_abaixo">É a junção de um "I" em português e em katakana com o kanji de baixo</string>
    <string name="macete_kao_face">O super-herói sabe quando a menina de marias-chiquinhas está em apuros: Basta olhar para a face dela</string>
    <string name="macete_kimasu_vestir">Alguém vestiu uma fantasia de alienígena. Dá para perceber que é uma fantasia só de olhar o zíper</string>
    <string name="macete_kyuuni_subitamente">A parte de cima lembra os katakanas de "ku" e "yo" e se você ler de cima para baixo, fica "yoku" que é muito. Embaixo, há o kanji de coração. Quando eu vejo a pessoa que eu amo, subitamente meu coração bate muito</string>
    <string name="macete_mijikai_curto">Do lado esquerdo há uma garota de cabelo curto e do direito há "koi", que é amor em japonês. Uma mulher corta o cabelo para arranjar um namorado</string>
    <string name="macete_ocha_cha">Macete para o kanji: Tem capim em cima, uma tampa de chá, um "T" de "Tea" que é chá em inglês e umas gotas do chá derramando</string>
    <string name="macete_okimasu_acordar">Eu acordo da minha Soneca(por isso o "S" do lado direito) e me levanto da cama</string>
    <string name="macete_okurimasu_enviar">Em uma época antiga, as pessoas tinham de subir em cavalos e gritar muito com eles só para enviar uma carta para um amigo</string>
    <string name="macete_suki_gostar">Na esquerda há o kanji de mulher e na direita, há o de criança. Uma mãe gosta de seu filho</string>
    <string name="macete_tomeru_parar">Para que o pedestre consiga atravessar, o guarda de trânsito manda os carros pararem dizendo "stop"(parar em inglês)</string>
    <string name="macete_tsuyoi_forte">Do lado esquerdo, há uma barra de metal entortada. Do lado direito, há dois braços musculosos fazendo sinal de "OK" e um kanji de "no meio de" no meio deles. Só mesmo sendo muito forte para entortar uma barra de metal</string>
    <string name="title_activity_lojinha_macete_kanji">LojinhaMaceteKanjiActivity</string>
    <string name="title_activity_ver_macete_kanji">VerMaceteKanjiActivity</string>
    <string name="erro_mudar_dica">Esta é a última dica da rodada, por isso o item não fez nada</string>
    <string name="palavra_esta_mudando">A palavra está mudando...</string>
    <string name="erro_reviver_carta">Você não pode reviver essa carta. Você perdeu o item!</string>
    
    <!-- da lojinha -->
    <string name="titulo_lojinha">Lojinha</string>
    <string name="label_dinheiro">Dinheiro:</string>
    <string name="label_mao">mão</string>
    <string name="label_cha">chá</string>
    <string name="label_bebe">bebê</string>
    <string name="label_cabeca">cabeça</string>
    <string name="moeda_do_jogo">JP</string>
    <string name="botao_visualizar_macete">abrir</string>
    <string name="credito_insuficiente">crédito insuficiente</string>
    <string name="title_activity_ver_macete_kanji">VerMaceteKanjiActivity</string>
    <string name="botao_comprar_item_loja">comprar</string>
    <string name="texto_ganhou">ganhou</string>
	<string name="texto_na_partida">na partida!</string>

</resources>
